<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.gridimagesearch.fragments.FiltersDialogFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:layout_gravity="left|top"
        android:text="@string/image_size">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingRight="12dp"
            android:text="@string/image_size"
            android:id="@+id/tvImageSize"
            android:layout_gravity="left|bottom"/>

        <Spinner
            android:id="@+id/spImageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/image_size"
            android:prompt="@string/image_size"
            android:layout_toRightOf="@id/tvImageSize"
            android:layout_alignBottom="@id/tvImageSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingRight="12dp"
            android:layout_below="@id/tvImageSize"
            android:text="@string/color_filter"
            android:id="@+id/tvColorFilter"
            android:layout_gravity="left|bottom"/>

        <Spinner
            android:id="@+id/spColorFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/image_color"
            android:prompt="@string/color_filter"
            android:layout_toRightOf="@id/tvColorFilter"
            android:layout_alignLeft="@id/spImageSize"
            android:layout_alignBottom="@id/tvColorFilter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingRight="12dp"
            android:layout_below="@id/tvColorFilter"
            android:text="@string/image_type"
            android:id="@+id/tvImageType"
            android:layout_gravity="left|bottom"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageType"
            android:entries="@array/image_type"
            android:prompt="@string/image_type"
            android:layout_toRightOf="@id/tvImageType"
            android:layout_alignLeft="@id/spImageSize"
            android:layout_alignBottom="@id/tvImageType"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingRight="12dp"
            android:layout_below="@id/tvImageType"
            android:text="@string/site_filter"
            android:id="@+id/tvSiteFilter"
            android:layout_gravity="left|bottom"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSiteFilter"
            android:layout_toRightOf="@id/tvSiteFilter"
            android:layout_alignLeft="@id/spImageSize"
            android:layout_alignBottom="@id/tvSiteFilter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSiteFilter"
            android:layout_marginTop ="48dp"
            android:layout_marginLeft="48dp"
            android:text="@string/cancel_button_label"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnCancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSiteFilter"
            android:layout_marginTop="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/save_button_label"
            android:layout_alignParentRight="true"
            android:id="@+id/btnSave"/>
    </RelativeLayout>
</FrameLayout>
